<resources>
    <string name="app_name">Meal Planner</string>
    <string name="todayMenuItemTitle">Today</string>
    <string name="calendarMenuItemTitle">Calendar</string>
    <string name="recipesMenuItemTitle">Recipes</string>
    <string name="lunchTitle">Lunch</string>
    <string name="dinnerTitle">Dinner</string>
    <string name="dessertTitle">Dessert</string>
    <string name="otherTitle">Other</string>
    <string name="breakfastTitle">Breakfast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mealsTitle">MEALS</string>
    <string name="dessertsTitle">DESSERTS</string>
    <string name="drinksTitle">DRINKS</string>
    <string name="othersTitle">OTHERS</string>
    <string name="recipeNameTitle">Recipe Name</string>
    <string name="creatorTitle">Creator Name</string>
    <string name="cookTimeTitle">Cook Time</string>
    <string name="difficultyTitle">Difficulty</string>
    <string name="addTitle">Add</string>
    <string name="newTitle">New</string>
    <string name="newRecipeActivityTitle">Add a new recipe</string>
    <string name="newRecipeName">Recipe Name</string>
    <string name="creator">Creator</string>
    <string name="cookTime">Cook Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="easyDifficulty">EASY</string>
    <string name="mediumDifficulty">MEDIUM</string>
    <string name="hardDifficulty">HARD</string>
    <string name="mealTitle">MEAL</string>
    <string name="categoryTitle">Category</string>
    <string name="nameWarningText">Recipe name is required</string>
    <string name="nextText">NEXT</string>
    <string name="splashTitle">MEAL PLANNER</string>
    <string name="inMinutesText">(In minutes)</string>
    <string name="ingredientsText">INGREDIENTS</string>
    <string name="ingredientNameText">Ingredient Name</string>
    <string name="previousShortText">PREV</string>
    <string name="noMealsText">No meal recipes yet!</string>
    <string name="noDessertsText">No dessert recipes yet!</string>
    <string name="noDrinksText">No drink recipes yet!</string>
    <string name="noOthersText">No other recipes yet!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name_capitalized">MEAL PLANNER</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="signUpText">Sign up</string>
    <string name="finishText">FINISH</string>
</resources>
