<?xml version="1.0" encoding="utf-8"?>
<!-- This is the xml layout for the AddIngredientsFragment
    Contents of this xml:
    - TextView saying "Ingredients" at the top to tell user of
       fragment purpose
    - EditText for user to enter an ingredient name
    - (Something) for selecting measurement type
    - (Something) for entering number of ingredient needed
    - Button to be clicked to add the ingredient that was entered and clear components
    for the addition of the next possible ingredient
    - (ListView or RecyclerView) for showing the current ingredients entered
    - Button (precious button) that will take the user back to the add bulk fragment
    - Button (next button) that will take the user to the next fragment
    which will be for entering directions
    -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".AddIngredientsFragment">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/fira_sans_semibold"
        android:text="@string/ingredientsText"
        android:textColor="@color/sizzlingRed"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.008">

        <EditText
            android:id="@+id/ingredientAmountTextView"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="3"
            android:elevation="@dimen/titlePadding"
            android:ems="2"
            android:fontFamily="@font/fira_sans"
            android:gravity="center"
            android:inputType="number"
            android:shadowColor="@color/sizzlingRed"
            android:textColorLink="@color/sizzlingRed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientMeasurementRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:elevation="@dimen/verticalCardViewPadding"
            android:orientation="vertical">

        </androidx.recyclerview.widget.RecyclerView>

        <EditText
            android:id="@+id/ingredientNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="@dimen/verticalCardViewPadding"
            android:ems="10"
            android:hint="@string/ingredientNameText"
            android:inputType="textPersonName"
            android:textColorLink="@color/sizzlingRed" />
    </LinearLayout>

    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/sizzlingRed"
        android:elevation="@dimen/verticalCardViewPadding"
        android:fontFamily="@font/fira_sans_semibold"
        android:text="@string/addTitle"
        android:textColor="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.017" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredientButton"
        app:layout_constraintVertical_bias="0.049" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/titlePadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945">

        <Button
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/verticalCardViewPadding"
            android:layout_weight="1"
            android:background="@drawable/toolbar_gradient"
            android:fontFamily="@font/fira_sans_semibold"
            android:padding="@dimen/titlePadding"
            android:text="@string/previousShortText"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/verticalCardViewPadding"
            android:layout_weight="1"
            android:background="@drawable/toolbar_gradient"
            android:fontFamily="@font/fira_sans_semibold"
            android:padding="@dimen/titlePadding"
            android:text="@string/nextText"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>